[package]
name = "af-pqc"
version = "0.1.0"
edition = "2021"
description = "Production-ready post-quantum cryptographic framework with hybrid Dilithium3 + Ed25519 signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/truth-linked/AF-PQC"
homepage = "https://github.com/truth-linked/AF-PQC"
documentation = "https://docs.rs/af-pqc"
keywords = ["cryptography", "post-quantum", "dilithium", "ed25519", "security"]
categories = ["cryptography", "command-line-utilities"]
authors = ["Truth Linked <contact@truthlinked.com>"]
readme = "README.md"

[workspace]

[[bin]]
name = "af-cli"
path = "src/bin/main.rs"

[dependencies]
crystals-dilithium = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
aes-gcm = "0.10"
indicatif = "0.17"
clap_complete = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
bincode = "1.3"
secrets = "1.2"
base64 = "0.22"
subtle = "2.5"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
witness-integration = []
